compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__negative_size_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "<<1:size(-1)>>"
---
----- SOURCE CODE
<<1:size(-1)>>

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:5
  │
1 │ <<1:size(-1)>>
  │     ^^^^^^^^ A constant size must be a positive number

See: https://tour.gleam.run/data-types/bit-arrays/
